@@ -12,6 +12,7 @@ To Do:
 - update plugin howto for BarData usage
 - fix trendlines and fibo objects to plot on weekly and monthly charts as well
 - make a freshmeat entry
+- context sensitive help
 
 
 Maybe some day:
