@@ -15,7 +15,6 @@
   <li>Line Type - The type of plot to draw</li>
   <li>Label - The text to identify the CCI plot<br>
   </li>
-  <li>Deviation - Standard deviations to use</li>
   <li>Period - The period used for the CCI</li>
   <li>Smoothing - The period used for smoothing the CCI<br>
   </li>
