@@ -1,0 +1,17 @@
+TEMPLATE = lib
+
+CONFIG += thread warn_on plugin
+QMAKE_CXXFLAGS += -Os
+
+HEADERS += VFI.h
+
+SOURCES += VFI.cpp
+
+TARGET = VFI.0.26
+
+INCLUDEPATH += ../../../lib
+
+unix:linux-g++:LIBS += -ldl
+
+target.path = /usr/lib/qtstalker/indicator
+INSTALLS += target
