@@ -1,6 +1,8 @@
 0.27
 ====
 
+20040614: - applied patch #972357 - new indicator VFI. Thanks to Xiaoguang Zhang.
+
 
 
 0.26
